@@ -7,6 +7,8 @@
 # autorevision - extracts metadata about the head version from your
 # repository.
 
+# shellcheck disable=SC2154
+
 # Usage message.
 arUsage() {
 	tee >&2 << EOF
@@ -115,6 +117,16 @@ elif [ ! -f "${CACHEFILE}" ] && [ "${CACHEFORCE}" = "1" ]; then
 	exit 1
 fi
 
+# Only use the local keyword if it is there (Solaris we are looking at
+# you).
+if command -v local > /dev/null 2>&1; then
+	LOCAL="local"
+elif command -v typeset > /dev/null 2>&1; then
+	LOCAL="typeset"
+else
+	LOCAL=""
+fi
+
 # Make sure that the path we are given is one we can source
 # (dash, we are looking at you).
 if [ ! -z "${CACHEFILE}" ] && ! echo "${CACHEFILE}" | grep -q '^\.*/'; then
@@ -128,7 +140,7 @@ GENERATED_HEADER="Generated by autorevision - do not hand-hack!"
 # For git repos
 # shellcheck disable=SC2039,SC2164,SC2155
 gitRepo() {
-	local oldPath="${PWD}"
+	${LOCAL} oldPath="${PWD}"
 
 	cd "$(git rev-parse --show-toplevel)"
 
@@ -136,7 +148,7 @@ gitRepo() {
 
 	VCS_BASENAME="$(basename "${PWD}")"
 
-	local currentRev="$(git rev-parse HEAD)"
+	${LOCAL} currentRev="$(git rev-parse HEAD)"
 
 	VCS_UUID="$(git rev-list --max-parents=0 --date-order --reverse "${currentRev}" 2>/dev/null | sed -n 1p)"
 	if [ -z "${VCS_UUID}" ]; then
@@ -171,7 +183,7 @@ gitRepo() {
 	VCS_BRANCH="$(git rev-parse --symbolic-full-name --verify "$(git name-rev --name-only --no-undefined "${currentRev}" 2>/dev/null)" 2>/dev/null | sed -e 's:refs/heads/::' | sed -e 's:refs/::')"
 
 	# Cache the description
-	local DESCRIPTION="$(git describe --long --tags "${currentRev}" 2>/dev/null)"
+	${LOCAL} DESCRIPTION="$(git describe --long --tags "${currentRev}" 2>/dev/null)"
 
 	# Current or last tag ancestor (empty if no tags)
 	VCS_TAG="$(echo "${DESCRIPTION}" | sed -e "s:-g${VCS_SHORT_HASH}\$::" -e 's:-[0-9]*$::')"
@@ -188,7 +200,7 @@ gitRepo() {
 	if [ -z "${VCS_DATE}" ]; then
 		echo "warning: Action stamps require git version 2.7+." 1>&2
 		VCS_DATE="$(git log -1 --pretty=format:%ci "${currentRev}" | sed -e 's: :T:' -e 's: ::' -e 's|+00:00|Z|')"
-		local ASdis="1"
+		${LOCAL} ASdis="1"
 	fi
 
 	# Action Stamp
@@ -204,7 +216,7 @@ gitRepo() {
 # For hg repos
 # shellcheck disable=SC2039,SC2164
 hgRepo() {
-	local oldPath="${PWD}"
+	${LOCAL} oldPath="${PWD}"
 
 	cd "$(hg root)"
 
@@ -257,7 +269,7 @@ hgRepo() {
 # For bzr repos
 # shellcheck disable=SC2039,SC2164
 bzrRepo() {
-	local oldPath="${PWD}"
+	${LOCAL} oldPath="${PWD}"
 
 	cd "$(bzr root)"
 
@@ -307,17 +319,17 @@ bzrRepo() {
 # For svn repos
 # shellcheck disable=SC2039,SC2164,SC2155
 svnRepo() {
-	local oldPath="${PWD}"
+	${LOCAL} oldPath="${PWD}"
 
 	VCS_TYPE="svn"
 
 	case "${PWD}" in
 	/*trunk*|/*branches*|/*tags*)
-		local fn="${PWD}"
+		${LOCAL} fn="${PWD}"
 		while [ "$(basename "${fn}")" != 'trunk' ] && [ "$(basename "${fn}")" != 'branches' ] && [ "$(basename "${fn}")" != 'tags' ] && [ "$(basename "${fn}")" != '/' ]; do
-			local fn="$(dirname "${fn}")"
+			${LOCAL} fn="$(dirname "${fn}")"
 		done
-		local fn="$(dirname "${fn}")"
+		${LOCAL} fn="$(dirname "${fn}")"
 		if [ "${fn}" = '/' ]; then
 			VCS_BASENAME="$(basename "${PWD}")"
 		else
@@ -330,7 +342,7 @@ svnRepo() {
 	VCS_UUID="$(svn info --xml | sed -n -e 's:<uuid>::' -e 's:</uuid>::p')"
 
 	# Cache svnversion output
-	local SVNVERSION="$(svnversion)"
+	${LOCAL} SVNVERSION="$(svnversion)"
 
 	# Is the working copy clean?
 	echo "${SVNVERSION}" | grep -q "M"
@@ -364,8 +376,8 @@ svnRepo() {
 	# Current branch
 	case "${PWD}" in
 	/*trunk*|/*branches*|/*tags*)
-		local lastbase=""
-		local fn="${PWD}"
+		${LOCAL} lastbase=""
+		${LOCAL} fn="${PWD}"
 		while :
 		do
 			base="$(basename "${fn}")"
@@ -379,8 +391,8 @@ svnRepo() {
 				VCS_BRANCH=""
 				break
 			fi
-			local lastbase="${base}"
-			local fn="$(dirname "${fn}")"
+			${LOCAL} lastbase="${base}"
+			${LOCAL} fn="$(dirname "${fn}")"
 		done
 		;;
 	*) VCS_BRANCH="" ;;
@@ -1011,7 +1023,7 @@ EOF
 # For C++ Header output
 # shellcheck disable=SC2155,SC2039
 hppOutput() {
-	local NAMESPACE="$(echo "${VCS_BASENAME}" | sed -e 's:_::g' | tr '[:lower:]' '[:upper:]')"
+	${LOCAL} NAMESPACE="$(echo "${VCS_BASENAME}" | sed -e 's:_::g' | tr '[:lower:]' '[:upper:]')"
 	tee << EOF
 /* ${GENERATED_HEADER} */
 
@@ -1104,8 +1116,8 @@ EOF
 # Count path segments
 # shellcheck disable=SC2039
 pathSegment() {
-	local pathz="${1}"
-	local depth="0"
+	${LOCAL} pathz="${1}"
+	${LOCAL} depth="0"
 
 	if [ ! -z "${pathz}" ]; then
 		# Continue until we are at / or there are no path separators left.
@@ -1120,10 +1132,10 @@ pathSegment() {
 # Largest of four numbers
 # shellcheck disable=SC2039
 multiCompare() {
-	local larger="${1}"
-	local numA="${2}"
-	local numB="${3}"
-	local numC="${4}"
+	${LOCAL} larger="${1}"
+	${LOCAL} numA="${2}"
+	${LOCAL} numB="${3}"
+	${LOCAL} numC="${4}"
 
 	[ "${numA}" -gt "${larger}" ] && larger="${numA}"
 	[ "${numB}" -gt "${larger}" ] && larger="${numB}"
@@ -1136,49 +1148,49 @@ multiCompare() {
 repoTest() {
 	REPONUM="0"
 	if command -v git > /dev/null 2>&1; then
-		local gitPath="$(git rev-parse --show-toplevel 2>/dev/null)"
-		local gitDepth="$(pathSegment "${gitPath}")"
+		${LOCAL} gitPath="$(git rev-parse --show-toplevel 2>/dev/null)"
+		${LOCAL} gitDepth="$(pathSegment "${gitPath}")"
 		if [ ! -z "${gitPath}" ]; then
 			REPONUM="$((REPONUM+1))"
 		fi
 	else
-		local gitDepth="0"
+		${LOCAL} gitDepth="0"
 	fi
 	if command -v hg > /dev/null 2>&1; then
-		local hgPath="$(hg root 2>/dev/null)"
-		local hgDepth="$(pathSegment "${hgPath}")"
+		${LOCAL} hgPath="$(hg root 2>/dev/null)"
+		${LOCAL} hgDepth="$(pathSegment "${hgPath}")"
 		if [ ! -z "${hgPath}" ]; then
 			REPONUM="$((REPONUM+1))"
 		fi
 	else
-		local hgDepth="0"
+		${LOCAL} hgDepth="0"
 	fi
 	if command -v bzr > /dev/null 2>&1; then
-		local bzrPath="$(bzr root 2>/dev/null)"
-		local bzrDepth="$(pathSegment "${bzrPath}")"
+		${LOCAL} bzrPath="$(bzr root 2>/dev/null)"
+		${LOCAL} bzrDepth="$(pathSegment "${bzrPath}")"
 		if [ ! -z "${bzrPath}" ]; then
 			REPONUM="$((REPONUM+1))"
 		fi
 	else
-		local bzrDepth="0"
+		${LOCAL} bzrDepth="0"
 	fi
 	if command -v svn > /dev/null 2>&1; then
-		local stringz="<wcroot-abspath>"
-		local stringx="</wcroot-abspath>"
-		local svnPath="$(svn info --xml 2>/dev/null | sed -n -e "s:${stringz}::" -e "s:${stringx}::p")"
+		${LOCAL} stringz="<wcroot-abspath>"
+		${LOCAL} stringx="</wcroot-abspath>"
+		${LOCAL} svnPath="$(svn info --xml 2>/dev/null | sed -n -e "s:${stringz}::" -e "s:${stringx}::p")"
 		# An old enough svn will not be able give us a path; default
 		# to 1 for that case.
 		if [ ! -z "${svnPath}" ]; then
-			local svnDepth="$(pathSegment "${svnPath}")"
+			${LOCAL} svnDepth="$(pathSegment "${svnPath}")"
 			REPONUM="$((REPONUM+1))"
 		elif [ -z "${svnPath}" ] && [ -d ".svn" ]; then
-			local svnDepth="1"
+			${LOCAL} svnDepth="1"
 			REPONUM="$((REPONUM+1))"
 		else
-			local svnDepth="0"
+			${LOCAL} svnDepth="0"
 		fi
 	else
-		local svnDepth="0"
+		${LOCAL} svnDepth="0"
 	fi
 
 	# Do not do more work then we have to.
@@ -1187,7 +1199,7 @@ repoTest() {
 	fi
 
 	# Figure out which repo is the deepest and use it.
-	local wonRepo="$(multiCompare "${gitDepth}" "${hgDepth}" "${bzrDepth}" "${svnDepth}")"
+	${LOCAL} wonRepo="$(multiCompare "${gitDepth}" "${hgDepth}" "${bzrDepth}" "${svnDepth}")"
 	if [ "${wonRepo}" = "${gitDepth}" ]; then
 		gitRepo
 	elif [ "${wonRepo}" = "${hgDepth}" ]; then
