@@ -2,6 +2,7 @@
 
 Repository head:
   Only use the committer date for git.
+  Only use the `local` keyword where supported.
 
 1.18 @ 2016-11-22:
   Fix some bashisms in the make file.
